Modifications in new employee page

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--820504659\testng-customsuite.xml</span>
+                    <span>C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--701783932\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ParaBank.Tests.AdminOrgLocationTest" class="method navigator-link" hash-for-method="adminNewLocation">adminNewLocation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="ParaBank.Tests.PIMEmployeeTest" class="method navigator-link" hash-for-method="newEmployee">newEmployee</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">ParaBank.Tests.AdminOrgLocationTest</span>
+              <span class="class-name">ParaBank.Tests.PIMEmployeeTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="adminNewLocation">
-                  </a> <!-- adminNewLocation -->
-                  <span class="method-name">adminNewLocation</span>
+                  <a name="newEmployee">
+                  </a> <!-- newEmployee -->
+                  <span class="method-name">newEmployee</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--820504659\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--701783932\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;ParaBank.Tests.AdminOrgLocationTest&quot;&gt;
+      &lt;class name=&quot;ParaBank.Tests.PIMEmployeeTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;adminNewLocation&quot;/&gt;
+          &lt;include name=&quot;newEmployee&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- ParaBank.Tests.AdminOrgLocationTest --&gt;
+      &lt;/class&gt; &lt;!-- ParaBank.Tests.PIMEmployeeTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'adminNewLocation')
-data.setCell(0, 2, 'ParaBank.Tests.AdminOrgLocationTest')
-data.setCell(0, 3, 33650);
+data.setCell(0, 1, 'newEmployee')
+data.setCell(0, 2, 'ParaBank.Tests.PIMEmployeeTest')
+data.setCell(0, 3, 16725);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 33 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -217,7 +217,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">ParaBank.Tests.AdminOrgLocationTest</span>
+              <span class="ignored-class-name">ParaBank.Tests.PIMEmployeeTest</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">loginTest</span>
                 <br/>
@@ -231,18 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">ParaBank.Tests.AdminOrgLocationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">ParaBank.Tests.PIMEmployeeTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">adminNewLocation</span>
-                <span class="method-start">4636 ms</span>
+                <span class="method-name">newEmployee</span>
+                <span class="method-start">6898 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">38294 ms</span>
+                <span class="method-start">23631 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
